Tested with deployed Foundry AI